--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "leane",
   "private": true,
   "dependencies": {
-    "bulma": "^0.6.0"
+    "bulma": "^0.6.0",
+    "jquery": "^3.2.1"
   }
 }
